toml-pretty-deser/tests/snapshots/c01__test_tagged_enum_variant_context__missing_field_shows_variant_context.snap
---
source: toml-pretty-deser/tests/c01.rs
expression: pretty
---
Error 1/1
  ╭─test.toml
  ┆
1 │ [item]
  ┆ ───┬──
  ┆    │
  ┆    ╰─── Missing required key: 'value'.
2 │ kind = 'VarA'
  ┆        ───┬──
  ┆           │
  ┆           ╰─── Involving this enum variant.
──╯
