toml-pretty-deser/tests/snapshots/c01__test_tagged_enum_variant_context__unknown_key_still_shows_variant_context.snap
---
source: toml-pretty-deser/tests/c01.rs
expression: pretty
---
Error 1/1
  ╭─test.toml
  ┆
1 │ [item]
2 │ kind = 'VarA'
  ┆        ───┬──
  ┆           │
  ┆           ╰─── Involving this enum variant.
  ┆
3 │ value = 5
4 │ unknown_key = 10
  ┆ ─────┬─────
  ┆      │
  ┆      ╰─────────── Unknown key.
──╯
Hint: All known accepted values have been used.
